--- a/.github/workflows/dd.yml
+++ b/.github/workflows/dd.yml
@@ -16,6 +16,5 @@ jobs:
         # Use latest release.
         uses: jgehrcke/github-repo-stats@RELEASE
         with:
-          ghtoken: ${{ secrets.GITHUB_TOKEN }}
-
+          ghtoken: ${{ secrets.ghrs_github_api_token }}
 
